# roots

./: .env.example  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_gender.py
backend/app/: config.py  database.py  deps.py  main.py
backend/app/models/: __init__.py  invitation.py  media.py  person.py  proposal.py  relationship.py  section.py  tree.py  user.py
backend/app/routers/: admin.py  auth.py  invitations.py  media.py  persons.py  proposals.py  relationships.py  search.py  sections.py  trees.py
backend/app/schemas/: auth.py  invitation.py  media.py  person.py  proposal.py  relationship.py  section.py  tree.py
backend/app/services/: auth.py  storage.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/person/: AddRelativeModal.tsx  DocumentsList.tsx  PersonHeader.tsx  PhotoGallery.tsx  RelativesList.tsx  SectionEditor.tsx
frontend/src/components/proposals/: ProposalFeed.tsx
frontend/src/components/search/: SearchBar.tsx
frontend/src/components/tree/: AddPersonModal.tsx  LinkPersonModal.tsx  ParentChildEdge.tsx  (+4 more)
frontend/src/hooks/: useAuth.ts  useTree.ts
frontend/src/pages/: AdminPage.tsx  LoginPage.tsx  PersonPage.tsx  RegisterPage.tsx  TreePage.tsx  TreesPage.tsx
frontend/src/stores/: authStore.ts
frontend/src/types/: index.ts
infra/nginx/: nginx.conf  nginx.dev.conf
(+4 files in other folders)
